--- a/templates/team/team_list.html
+++ b/templates/team/team_list.html
@@ -15,8 +15,7 @@
             </span>
 
             <h1 class="display-1 fw-light mb-5 text-white">
-                The People Behind<br>
-                <span class="text-primary-color fw-normal">Architectural Precision</span>
+                Our Team
             </h1>
 
             <p class="hero-text mb-0">
