--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="google-site-verification" content="ZYNjy-Yf5W-j7wpF5JhqUehPavm7SzRIjB-kCkA2jE0" />
     <meta name="description" content="{% block meta_description %}Sellux Plaster Ltd - Premium plastering, POP ceiling designs, and luxury cornices in Accra, Ghana. Expert architectural solutions since 2015.{% endblock meta_description %}">
     <meta name="keywords" content="plastering, POP ceiling, cornices, interior design, architecture, Sellux Plaster, luxury interiors, Ghana, Accra, affordable luxury">
     <meta name="author" content="Sellux Plaster Ltd">
