--- a/templates/catalogue/product_detail.html
+++ b/templates/catalogue/product_detail.html
@@ -107,7 +107,7 @@
                             <div class="d-grid">
                                 {% if product.stock > 0 %}
                                 <button type="submit" class="btn btn-primary btn-lg rounded-pill fw-bold py-3 shadow-float transition-transform">
-                                    Add to Project <i class="bi bi-bag-plus ms-2"></i>
+                                    Add to Cart <i class="bi bi-bag-plus ms-2"></i>
                                 </button>
                                 {% else %}
                                 <button type="button" class="btn btn-secondary btn-lg rounded-pill fw-bold py-3" disabled>
