--- a/templates/catalogue/product_detail.html
+++ b/templates/catalogue/product_detail.html
@@ -78,7 +78,7 @@
                     </div>
 
                     <p class="text-secondary lh-lg mb-5">
-                        {{ product.description }}
+                        {{ product.description|linebreaks }}
                     </p>
 
                     <div class="bg-light p-4 rounded-4 mb-4 border border-light-subtle">
