--- a/templates/base.html
+++ b/templates/base.html
@@ -455,7 +455,7 @@
                     </div>
                     <span class="ms-3 text-white fw-bold fs-5">SELLUX <span class="text-primary">PLASTER</span></span>
                 </div>
-                <p class="text-secondary small lh-lg">Redefining elegance with precision plastering and architectural masterpieces. We bring your vision to life with artisan craftsmanship.</p>
+                <p class="text-secondary small lh-lg">Redefining elegance with precision architectural masterpieces. We bring your vision to life with artisan craftsmanship.</p>
                 <div class="d-flex gap-3 mt-4">
                     <a href="#" class="text-white hover-primary"><i class="bi bi-facebook fs-5"></i></a>
                     <a href="#" class="text-white hover-primary"><i class="bi bi-instagram fs-5"></i></a>
@@ -466,10 +466,10 @@
             <div class="col-lg-2 col-6">
                 <h5 class="footer-heading">Services</h5>
                 <ul class="list-unstyled d-flex flex-column gap-2">
-                    <li><a href="{% url 'services:service_list' %}" class="footer-link">Our Services</a></li>
-                    <li><a href="#" class="footer-link">Cornice Design</a></li>
-                    <li><a href="#" class="footer-link">POP Ceilings</a></li>
+                    <li><a href="#" class="footer-link">Acoustic Ceiling Systems </a></li>
+                    <li><a href="#" class="footer-link">Design Ceilings</a></li>
                     <li><a href="#" class="footer-link">Gypsum Board</a></li>
+                    <li><a href="#" class="footer-link">Product Supply</a></li>
                 </ul>
             </div>
 
@@ -531,7 +531,7 @@
                 <p class="small text-secondary mb-0">© {% now "Y" %} Sellux Plaster Ltd. All Rights Reserved.</p>
             </div>
             <div class="col-md-6 text-center text-md-end">
-                <p class="small text-secondary mb-0">Designed for Luxury.</p>
+                <p class="small text-secondary mb-0">Powered by InsightWeb</p>
             </div>
         </div>
     </div>
